Fix width of Team explorer on small screens

--- a/scss/pages/homepage.scss
+++ b/scss/pages/homepage.scss
@@ -56,7 +56,7 @@
             .details {
                 font: normal 12px/15px $Ideal;
                 min-height: 48px;
-                padding: 30px 144px 0 0;
+                padding: 30px 64px 0 0;
                 left: 0;
                 .owner a {
                     color: $medium-gray;
